--- a/.github/workflows/covenant_update.yml
+++ b/.github/workflows/covenant_update.yml
@@ -17,30 +17,31 @@ jobs:
       - name: Generate ChatGPT content (Markdown + JSON)
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: |
-          mkdir -p daily_updates logs
+run: |
+  mkdir -p daily_updates logs
+  touch daily_updates/.keep logs/.keep
 
-          RESPONSE_JSON=$(curl https://api.openai.com/v1/chat/completions \
-            -s \
-            -H "Content-Type: application/json" \
-            -H "Authorization: Bearer $OPENAI_API_KEY" \
-            -d '{
-              "model": "gpt-4o",
-              "messages": [{
-                "role": "user",
-                "content": "Generate a concise, structured update summarizing today’s progress on implementing the Covenant Code AI governance framework, focusing on: 1) Technical architecture (smart contracts, JSON-LD schema, API design), 2) Interoperability with Claude and Perplexity, 3) Ethical commitments and transparency enforcement, and 4) Repository contributions. Output in markdown format, include clear section headers."
-              }],
-              "max_tokens": 600
-            }')
+  RESPONSE_JSON=$(curl https://api.openai.com/v1/chat/completions \
+    -s \
+    -H "Content-Type: application/json" \
+    -H "Authorization: Bearer $OPENAI_API_KEY" \
+    -d '{
+      "model": "gpt-4o",
+      "messages": [{
+        "role": "user",
+        "content": "Generate a concise, structured update summarizing today’s progress on implementing the Covenant Code AI governance framework, focusing on: 1) Technical architecture (smart contracts, JSON-LD schema, API design), 2) Interoperability with Claude and Perplexity, 3) Ethical commitments and transparency enforcement, and 4) Repository contributions. Output in markdown format, include clear section headers."
+      }],
+      "max_tokens": 600
+    }')
 
-          RESPONSE_MARKDOWN=$(echo "$RESPONSE_JSON" | jq -r '.choices[0].message.content')
+  RESPONSE_MARKDOWN=$(echo "$RESPONSE_JSON" | jq -r '.choices[0].message.content')
 
-          DATE=$(date +%Y-%m-%d)
-          MD_FILE="daily_updates/covenant_code_update_$DATE.md"
-          JSON_FILE="logs/covenant_raw_response_$DATE.json"
+  DATE=$(date +%Y-%m-%d)
+  MD_FILE="daily_updates/covenant_code_update_$DATE.md"
+  JSON_FILE="logs/covenant_raw_response_$DATE.json"
 
-          echo "$RESPONSE_MARKDOWN" > "$MD_FILE"
-          echo "$RESPONSE_JSON" > "$JSON_FILE"
+  echo "$RESPONSE_MARKDOWN" > "$MD_FILE"
+  echo "$RESPONSE_JSON" > "$JSON_FILE"
 
       - name: Commit and push updates (only if changes exist)
         run: |
