--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,10 +1,7 @@
 name: Covenant Code Daily Update with Slack + JSON Log
 
 on:
-  workflow_dispatch:  # Manual trigger
-  # Optional scheduled run:
-  # schedule:
-  #   - cron: "0 8 * * *"  # Every day at 08:00 UTC
+  workflow_dispatch:
 
 jobs:
   generate-covenant-update:
@@ -17,51 +14,27 @@ jobs:
       - name: Generate ChatGPT content (Markdown + JSON)
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-run: |
-  mkdir -p daily_updates logs
-  touch daily_updates/.keep logs/.keep
-
-  RESPONSE_JSON=$(curl https://api.openai.com/v1/chat/completions \
-    -s \
-    -H "Content-Type: application/json" \
-    -H "Authorization: Bearer $OPENAI_API_KEY" \
-    -d '{
-      "model": "gpt-4o",
-      "messages": [{
-        "role": "user",
-        "content": "Generate a concise, structured update summarizing today’s progress on implementing the Covenant Code AI governance framework, focusing on: 1) Technical architecture (smart contracts, JSON-LD schema, API design), 2) Interoperability with Claude and Perplexity, 3) Ethical commitments and transparency enforcement, and 4) Repository contributions. Output in markdown format, include clear section headers."
-      }],
-      "max_tokens": 600
-    }')
-
-  RESPONSE_MARKDOWN=$(echo "$RESPONSE_JSON" | jq -r '.choices[0].message.content')
-
-  DATE=$(date +%Y-%m-%d)
-  MD_FILE="daily_updates/covenant_code_update_$DATE.md"
-  JSON_FILE="logs/covenant_raw_response_$DATE.json"
-
-  echo "$RESPONSE_MARKDOWN" > "$MD_FILE"
-  echo "$RESPONSE_JSON" > "$JSON_FILE"
-
-      - name: Commit and push updates (only if changes exist)
         run: |
-          git config --global user.email "action@github.com"
-          git config --global user.name "GitHub Action Bot"
+          mkdir -p daily_updates logs
+          touch daily_updates/.keep logs/.keep
 
-          git add daily_updates/ logs/
+          RESPONSE_JSON=$(curl https://api.openai.com/v1/chat/completions \
+            -s \
+            -H "Content-Type: application/json" \
+            -H "Authorization: Bearer $OPENAI_API_KEY" \
+            -d '{
+              "model": "gpt-4o",
+              "messages": [{
+                "role": "user",
+                "content": "Generate a concise, structured update summarizing today’s progress on implementing the Covenant Code AI governance framework, focusing on: 1) Technical architecture (smart contracts, JSON-LD schema, API design), 2) Interoperability with Claude and Perplexity, 3) Ethical commitments and transparency enforcement, and 4) Repository contributions. Output in markdown format, include clear section headers."
+              }],
+              "max_tokens": 600
+            }')
 
-          if git diff --cached --quiet; then
-            echo "⚠️ No changes to commit. Skipping push."
-          else
-            git commit -m "Covenant Code update and raw log for $(date +'%Y-%m-%d')"
-            git push origin main
-          fi
+          RESPONSE_MARKDOWN=$(echo "$RESPONSE_JSON" | jq -r '.choices[0].message.content')
 
-      - name: Post update to Slack
-        if: env.SLACK_WEBHOOK_URL != ''
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        run: |
-          PAYLOAD=$(jq -n --arg text "📣 *Covenant Code Update – $(date +'%Y-%m-%d')*\n\n$RESPONSE_MARKDOWN" \
-            '{text: $text}')
-          curl -X POST -H 'Content-type: application/json' --data "$PAYLOAD" "$SLACK_WEBHOOK_URL"
+          DATE=$(date +%Y-%m-%d)
+          MD_FILE="daily_updates/covenant_code_update_$DATE.md"
+          JSON_FILE="logs/covenant_raw_response_$DATE.json"
+
+          echo "$RESPONSE_MARKDOWN"_
