--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -5,8 +5,7 @@ on:
 
 jobs:
   generate-covenant-update:
-  runs-on: ubuntu-latest
-
+    runs-on: ubuntu-latest
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -27,9 +26,9 @@ jobs:
               "messages": [{
                 "role": "user",
                 "content": "Generate a test message for todays Covenant Code workflow run. Say Hello world."
-                }],
+              }],
               "max_tokens": 600
-            }')
+          }')
 
           RESPONSE_MARKDOWN=$(echo "$RESPONSE_JSON" | jq -r '.choices[0].message.content')
 
@@ -37,29 +36,28 @@ jobs:
           MD_FILE="daily_updates/covenant_code_update_$DATE.md"
           JSON_FILE="logs/covenant_raw_response_$DATE.json"
 
-          echo "$RESPONSE_MARKDOWN"
-          
-    - name: Commit and push updates (only if changes exist)
-      run: |
-        git config --global user.email "action@github.com"
-        git config --global user.name "GitHub Action Bot"
+          echo "$RESPONSE_MARKDOWN" > "$MD_FILE"
+          echo "$RESPONSE_JSON" > "$JSON_FILE"
 
-        git add daily_updates/ logs/
-        if git diff --cached --quiet; then
-          echo "🔁 No changes to commit. Skipping push."
-        else
-          git commit -m "Covenant Code update and raw log for $(date +'%Y-%m-%d')"
-          git push origin main
-        fi
+      - name: Commit and push updates (only if changes exist)
+        run: |
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action Bot"
 
-    - name: Post update to Slack
-      if: env.SLACK_WEBHOOK_URL != ''
-      env:
-        SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-      run: |
-        PAYLOAD=$(jq -n --arg text "*📜 Covenant Code Update $(date +'%Y-%m-%d')*\n\n${RESPONSE_MARKDOWN}" \
-          '{text: $text}')
-        curl -X POST -H 'Content-type: application/json' \
-          --data "$PAYLOAD" "$SLACK_WEBHOOK_URL"
+          git add daily_updates/ logs/
+          if git diff --cached --quiet; then
+            echo "🟡 No changes to commit. Skipping push."
+          else
+            git commit -m "Covenant Code update and raw log for $(date +'%Y-%m-%d')"
+            git push origin main
+          fi
 
-
+      - name: Post update to Slack
+        if: env.SLACK_WEBHOOK_URL != ''
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          PAYLOAD=$(jq -n --arg text "*🧾 Covenant Code Update $(date +'%Y-%m-%d')*\n\n${RESPONSE_MARKDOWN}" \
+            '{text: $text}')
+          curl -X POST -H "Content-type: application/json" \
+            --data "$PAYLOAD" "$SLACK_WEBHOOK_URL"
