--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   generate-covenant-update:
     runs-on: ubuntu-latest
+
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -40,24 +41,20 @@ jobs:
           echo "$RESPONSE_JSON" > "$JSON_FILE"
 
       - name: Commit and push updates (only if changes exist)
+        env:
+          GH_PAT: ${{ secrets.GH_PAT }}
         run: |
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action Bot"
 
           git add daily_updates/ logs/
           if git diff --cached --quiet; then
-            echo "🟡 No changes to commit. Skipping push."
+            echo "🔶 No changes to commit. Skipping push."
           else
             git commit -m "Covenant Code update and raw log for $(date +'%Y-%m-%d')"
+            git remote set-url origin https://x-access-token:${GH_PAT}@github.com/${{ github.repository }}.git
             git push origin main
           fi
 
       - name: Post update to Slack
         if: env.SLACK_WEBHOOK_URL != ''
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        run: |
-          PAYLOAD=$(jq -n --arg text "*🧾 Covenant Code Update $(date +'%Y-%m-%d')*\n\n${RESPONSE_MARKDOWN}" \
-            '{text: $text}')
-          curl -X POST -H "Content-type: application/json" \
-            --data "$PAYLOAD" "$SLACK_WEBHOOK_URL"
